# llm-core

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/src/llm_core/: __init__.py  config.py  core.py  exceptions.py  helpers.py  pricing.py  retry.py  services.py  types.py
python/src/llm_core/providers/: __init__.py  anthropic.py  ollama.py  openai.py
python/tests/: test_core.py  test_helpers.py  test_pricing.py  test_providers.py  test_retry.py  test_services.py  test_types.py
typescript/: README.md  biome.json  index.ts  package.json
typescript/lib/: config.ts  core.ts  embed.ts  pricing.ts  retry.ts  services.ts  types.ts
typescript/lib/providers/: index.ts  openai.ts
typescript/tests/: config.test.ts  core.test.ts  embed.test.ts  health-check.test.ts  pricing-cost-calc.test.ts  providers.test.ts  retry-helpers-pricing.test.ts  services.test.ts
