[project]
name = "llm-core"
version = "0.1.0"
description = "Lightweight LLM completion library with provider adapters and service routing"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["apiconf>=0.2.0", "httpx>=0.27"]

[tool.uv.sources]
apiconf = { path = "../../apiconf/python", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603", "S607"]
"test_*.py" = ["S101", "S603", "S607"]
"**/test_*.py" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
